file(GLOB ICU_TOOL_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/*.c)

add_executable(icu.genbrk ${ICU_TOOL_SOURCES})
set_target_properties(icu.genbrk PROPERTIES OUTPUT_NAME "genbrk")
target_include_directories(icu.genbrk PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(icu.genbrk PRIVATE icu.libsicutu)

add_executable(ICU::genbrk ALIAS icu.genbrk)
set_target_properties(icu.genbrk PROPERTIES EXPORT_NAME "genbrk")

set_target_properties(icu.genbrk PROPERTIES BINARY_NAME "genbrk")
if(ICU_OPT_PLATFORM_WINDOWS)
    set_target_properties(icu.genbrk PROPERTIES TOOL_PLATFORM "WIN32")
else()
    set_target_properties(icu.genbrk PROPERTIES TOOL_PLATFORM "UNIX")
    if(ICU_LINKER_SUPPORTS_NO_AS_NEEDED)
        target_link_options(icu.genbrk PRIVATE "SHELL:-Wl,--no-as-needed" "SHELL:-lpthread" "SHELL:-Wl,--as-needed")
    endif()
endif()
set_property(TARGET icu.genbrk APPEND PROPERTY EXPORT_PROPERTIES TOOL_PLATFORM BINARY_NAME)
