file(GLOB ICU_TOOL_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/*.c)

add_executable(icu.gencfu ${ICU_TOOL_SOURCES})
set_target_properties(icu.gencfu PROPERTIES OUTPUT_NAME "gencfu")
target_include_directories(icu.gencfu PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(icu.gencfu PRIVATE icu.libsicutu)

add_executable(ICU::gencfu ALIAS icu.gencfu)
set_target_properties(icu.gencfu PROPERTIES EXPORT_NAME "gencfu")

set_target_properties(icu.gencfu PROPERTIES BINARY_NAME "gencfu")
if(ICU_OPT_PLATFORM_WINDOWS)
    set_target_properties(icu.gencfu PROPERTIES TOOL_PLATFORM "WIN32")
else()
    set_target_properties(icu.gencfu PROPERTIES TOOL_PLATFORM "UNIX")
    if(ICU_LINKER_SUPPORTS_NO_AS_NEEDED)
        target_link_options(icu.gencfu PRIVATE "SHELL:-Wl,--no-as-needed" "SHELL:-lpthread" "SHELL:-Wl,--as-needed")
    endif()
endif()
set_property(TARGET icu.gencfu APPEND PROPERTY EXPORT_PROPERTIES TOOL_PLATFORM BINARY_NAME)
