file(GLOB ICU_TOOL_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/*.c)

add_executable(icu.gendict ${ICU_TOOL_SOURCES})
set_target_properties(icu.gendict PROPERTIES OUTPUT_NAME "gendict")
target_include_directories(icu.gendict PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(icu.gendict PRIVATE icu.libsicutu)

add_executable(ICU::gendict ALIAS icu.gendict)
set_target_properties(icu.gendict PROPERTIES EXPORT_NAME "gendict")

set_target_properties(icu.gendict PROPERTIES BINARY_NAME "gendict")
if(ICU_OPT_PLATFORM_WINDOWS)
    set_target_properties(icu.gendict PROPERTIES TOOL_PLATFORM "WIN32")
else()
    set_target_properties(icu.gendict PROPERTIES TOOL_PLATFORM "UNIX")
    if(ICU_LINKER_SUPPORTS_NO_AS_NEEDED)
        target_link_options(icu.gendict PRIVATE "SHELL:-Wl,--no-as-needed" "SHELL:-lpthread" "SHELL:-Wl,--as-needed")
    endif()
endif()
set_property(TARGET icu.gendict APPEND PROPERTY EXPORT_PROPERTIES TOOL_PLATFORM BINARY_NAME)
