file(GLOB ICU_TOOL_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/*.c)

add_executable(icu.gensprep ${ICU_TOOL_SOURCES})
set_target_properties(icu.gensprep PROPERTIES OUTPUT_NAME "gensprep")
target_include_directories(icu.gensprep PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(icu.gensprep PRIVATE icu.libsicutu)

add_executable(ICU::gensprep ALIAS icu.gensprep)
set_target_properties(icu.gensprep PROPERTIES EXPORT_NAME "gensprep")

set_target_properties(icu.gensprep PROPERTIES BINARY_NAME "gensprep")
if(ICU_OPT_PLATFORM_WINDOWS)
    set_target_properties(icu.gensprep PROPERTIES TOOL_PLATFORM "WIN32")
else()
    set_target_properties(icu.gensprep PROPERTIES TOOL_PLATFORM "UNIX")
    if(ICU_LINKER_SUPPORTS_NO_AS_NEEDED)
        target_link_options(icu.gensprep PRIVATE "SHELL:-Wl,--no-as-needed" "SHELL:-lpthread" "SHELL:-Wl,--as-needed")
    endif()
endif()
set_property(TARGET icu.gensprep APPEND PROPERTY EXPORT_PROPERTIES TOOL_PLATFORM BINARY_NAME)
