file(GLOB ICU_TOOL_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/*.c)

add_executable(icu.icupkg ${ICU_TOOL_SOURCES})
set_target_properties(icu.icupkg PROPERTIES OUTPUT_NAME "icupkg")
target_include_directories(icu.icupkg PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(icu.icupkg PRIVATE icu.libsicutu)

add_executable(ICU::icupkg ALIAS icu.icupkg)
set_target_properties(icu.icupkg PROPERTIES EXPORT_NAME "icupkg")

set_target_properties(icu.icupkg PROPERTIES BINARY_NAME "icupkg")
if(ICU_OPT_PLATFORM_WINDOWS)
    set_target_properties(icu.icupkg PROPERTIES TOOL_PLATFORM "WIN32")
else()
    set_target_properties(icu.icupkg PROPERTIES TOOL_PLATFORM "UNIX")
    if(ICU_LINKER_SUPPORTS_NO_AS_NEEDED)
        target_link_options(icu.icupkg PRIVATE "SHELL:-Wl,--no-as-needed" "SHELL:-lpthread" "SHELL:-Wl,--as-needed")
    endif()
endif()
set_property(TARGET icu.icupkg APPEND PROPERTY EXPORT_PROPERTIES TOOL_PLATFORM BINARY_NAME)
