file(GLOB ICU_TOOL_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/*.c)

add_executable(icu.makeconv ${ICU_TOOL_SOURCES})
set_target_properties(icu.makeconv PROPERTIES OUTPUT_NAME "makeconv")
target_include_directories(icu.makeconv PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(icu.makeconv PRIVATE icu.libsicutu)

add_executable(ICU::makeconv ALIAS icu.makeconv)
set_target_properties(icu.makeconv PROPERTIES EXPORT_NAME "makeconv")

set_target_properties(icu.makeconv PROPERTIES BINARY_NAME "makeconv")
if(ICU_OPT_PLATFORM_WINDOWS)
    set_target_properties(icu.makeconv PROPERTIES TOOL_PLATFORM "WIN32")
else()
    set_target_properties(icu.makeconv PROPERTIES TOOL_PLATFORM "UNIX")
    if(ICU_LINKER_SUPPORTS_NO_AS_NEEDED)
        target_link_options(icu.makeconv PRIVATE "SHELL:-Wl,--no-as-needed" "SHELL:-lpthread" "SHELL:-Wl,--as-needed")
    endif()
endif()
set_property(TARGET icu.makeconv APPEND PROPERTY EXPORT_PROPERTIES TOOL_PLATFORM BINARY_NAME)
